# pygidSIM_torch

./: MANIFEST.in  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: tests.yml
pygidsim_torch/: __init__.py  crystal.py  directions.py  experiment.py  giwaxs_sim.py  int_sim.py  q_sim.py  utils.py
tests/: README.md  __init__.py  conftest.py  test_crystal.py  test_exp_par.py
