[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygidsim_torch"
version = "0.1.3dev"
description = "PyTorch-based implementation of pygidSIM package for calculating GIWAXS patterns"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Mikhail Romodin" }]
keywords = [
    "GIWAXS",
    "x-ray scattering",
    "diffraction",
]

dependencies = [
    "torch>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.10.0",
    "pytest-html>=3.1.0",
    "pytest-benchmark>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "pytest-html>=3.1.0",
    "pytest-benchmark>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/MishaRomodin/pygidSIM_torch"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pygidsim_torch*"]

[tool.setuptools.package-data]
pygidsim_torch = ["py.typed"]